# sobit_navigation_stack

./: CMakeLists.txt  README.md  README_EN.md  README_en.md  install.sh  package.xml
example/: navigation.py
scripts/: teleop.py
sobit_mapping/: CMakeLists.txt  README.md  package.xml
sobit_mapping/config/mapping/: sobit_turtlebot_gmapping.launch.xml
sobit_mapping/config/rviz/: sobit_gmapping_multi.rviz  sobit_navigation.rviz  sobit_navigation_octomap.rviz
sobit_mapping/launch/: create_location_file.launch  floor_color_setup.launch  flor_color_setup.launch  gmapping.launch  gmapping_multi_sensor.launch  hsr_active_slam.launch  hsr_create_location_file.launch  hsr_create_location_file_multi_sensor.launch  hsr_gmapping.launch  hsr_gmapping_multi_sensor.launch  hsr_teleop.launch  load_location_file.launch  location_file_viewer.launch  sobit_pro_active_slam.launch  sobit_pro_create_location_file.launch  sobit_pro_create_location_file_octomap.launch  sobit_pro_gmapping.launch  sobit_pro_octomap.launch  sobit_turtlebot_active_slam.launch  sobit_turtlebot_create_location_file.launch  sobit_turtlebot_create_location_file_octomap.launch  sobit_turtlebot_gmapping.launch  sobit_turtlebot_octomap.launch  sobit_turtlebot_rtabmap.launch  teleop.launch
sobit_mapping/launch/hsr/: build_octomap.launch  hsr_create_location_file.launch  hsr_create_location_file_multi_sensor.launch  hsr_create_location_file_octomap.launch  hsr_gmapping.launch  hsr_gmapping_multi_merger.launch  hsr_octomap.launch  hsr_octomap_with_rtab.launch
sobit_mapping/launch/include/: hsr_gmapping.launch.xml  hsr_rtabmap.launch.xml  rtabmap.launch.xml  sobit_gmapping.launch.xml  sobit_pro_rtabmap.launch.xml  sobit_turtlebot_rtabmap.launch.xml
sobit_mapping/launch/sobit/: sobit_active_slam.launch
sobit_mapping/launch/sobit_pro/: sobit_pro_active_slam.launch  sobit_pro_create_location_file.launch  sobit_pro_create_location_file_multi_sensor.launch  sobit_pro_create_location_file_octomap.launch  sobit_pro_gmapping.launch  sobit_pro_gmapping_multi_merger.launch  sobit_pro_octomap.launch  sobit_pro_rtabmap.launch
sobit_mapping/launch/sobit_turtlebot/: sobit_turtlebot_active_slam.launch  sobit_turtlebot_create_location_file.launch  sobit_turtlebot_create_location_file_multi_sensor.launch  sobit_turtlebot_create_location_file_octomap.launch  sobit_turtlebot_gmapping.launch  sobit_turtlebot_gmapping_multi_merger.launch  sobit_turtlebot_octomap.launch  sobit_turtlebot_rtabmap.launch
sobit_mapping/map/: 3f_e.pgm  3f_e.yaml  3f_e_location.yaml  4f_fe.pgm  4f_fe.yaml  4f_fe_location.yaml  7f_f.pgm  7f_f.yaml  7f_f_location.yaml  e301.pgm  e301.yaml  e301_gmapping.pgm  e301_gmapping.yaml  e301_gmapping_multi_sensor_gimp.pgm  e301_gmapping_multi_sensor_gimp.yaml  e301_gmapping_multi_sensor_org.pgm  example.pgm  example.yaml  faculty_building_location.yaml  map_11_19_15_25.pgm  map_11_19_15_25.yaml  map_11_23_19_54.pgm  map_11_23_19_54.yaml  map_11_27_16_5.pgm  map_11_27_16_5.yaml  map_2d_8_24_16_0.pgm  map_2d_8_24_16_0.yaml  map_2d_8_26_19_59.pgm  map_2d_8_26_19_59.yaml  map_2d_multi_10_26_21_41.bt  map_2d_multi_8_24_16_0.bt  map_2d_multi_8_26_19_59.bt  map_3d_10_26_21_41.bt  map_3d_11_12_14_22.bt  map_6_14_21_18.pgm  map_6_14_21_18.yaml  map_8_19_18_39.pgm  map_8_19_18_39.yaml  map_location_10_21_14_14.yaml  map_location_10_21_14_25.yaml  (+9 more)
sobit_mapping/map/example/: gmapping.yaml  gmapping_multi_merger.pgm  gmapping_multi_merger.yaml  location_projected_map.yaml  projected_map.pgm  projected_map.yaml
sobit_mapping/param/sobit_pro_octomap/: octomap_costmap_common_params.yaml
sobit_mapping/param/sobit_turtlebot_octomap/: octomap_costmap_common_params.yaml
sobit_mapping/param/template/: sobit_turtlebot_costmap_common_params.yaml
sobit_mapping/script/: pro_pantilt_ctr.py  rgb_checker.py  save_3dmap_command.py  save_map_command.py  turtlebot_pantilt_ctr.py
sobit_mapping/src/: create_location_file.cpp  display_location_marker.cpp  keyboard_teleop.cpp  location_file_viewer.cpp  projected_map_saver.cpp
sobit_navigation/: CMakeLists.txt  README.md  SETUP_README.md  package.xml
sobit_navigation/include/sobit_navigation/: point_cloud_processor.hpp
sobit_navigation/launch/: sobit_pro_navigation.launch  sobit_pro_navigation_octomap.launch  sobit_turtlebot_navigation.launch  sobit_turtlebot_navigation_octomap.launch
sobit_navigation/launch/hsr/: hsr_navigation.launch  hsr_navigation_multi_sensor.launch  hsr_navigation_octomap.launch
sobit_navigation/launch/sobit_pro/: sobit_pro_navigation.launch  sobit_pro_navigation_alsros.launch  sobit_pro_navigation_common.launch  sobit_pro_navigation_gmapping.launch  sobit_pro_navigation_multi_sensor.launch  sobit_pro_navigation_multi_sensor_from_color.launch  sobit_pro_navigation_multi_sensor_from_color_setup.launch  sobit_pro_ps4_control.launch  sobit_pro_teleop_keyboard.launch
sobit_navigation/launch/sobit_turtlebot/: sobit_turtlebot_navigation.launch  sobit_turtlebot_navigation_gmapping.launch  sobit_turtlebot_navigation_multi_sensor.launch  sobit_turtlebot_navigation_multi_sensor_from_color.launch  sobit_turtlebot_navigation_multi_sensor_from_color_setup.launch  sobit_turtlebot_navigation_octomap.launch  sobit_turtlebot_teleop_keyboard.launch
sobit_navigation/param/floor_color/: rgb_base.yaml
sobit_navigation/scripts/: rgb_checker.py  sobit_edu_pantilt_controll.py  sobit_mini_pantilt_controll.py  sobit_pro_pantilt_controll.py
sobit_navigation/src/: color_point_publisher.cpp  floor_color_setting.cpp  flor_color_setting.cpp  noise_color_pointcloud_publisher.cpp  noise_removal_pointcloud_publisher.cpp  object_pointcloud_publisher.cpp  point_cloud_processor.cpp  rgb_setting_param.cpp  test.py  yolo_pointcloud_publisher.cpp
sobit_navigation_library/: CMakeLists.txt  README.md  package.xml
sobit_navigation_library/example/: move_location_example.cpp  move_location_example.py  move_position_example.cpp  move_position_example.py  option_example.py
sobit_navigation_library/src/: sobit_navigation_library.cpp  sobit_navigation_library_python.cpp  sobit_navigation_pybind.cpp
(+85 files in other folders)
