<?xml version="1.0"?>
<package format="2">
  <name>sobit_navigation</name>
  <version>0.0.0</version>
  <description>The sobit_navigation package</description>

  <maintainer email="sobits@todo.todo">sobits</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>

  <!--<build_depend>message_generation</build_depend> -->
  <!--<exec_depend>message_runtime</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
